--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "webflow-helpers",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/webflowHelper.js",
   "repository": "git@github.com:momentechnologies/webflow-helpers.git",
   "author": "Max Moeschinger <max@momentech.no>",
   "license": "MIT",
@@ -9,6 +9,7 @@
     "axios": "^0.21.1"
   },
   "devDependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "prettier": "^2.2.1"
   }
 }
